Fix spin animation issue on mobile
Separated checkerboard into its own 3d plane to fix text clipping
on Safari iOS! Now animation is consistent on all viewports.

--- a/sass/style.scss
+++ b/sass/style.scss
@@ -28,8 +28,28 @@ body {
     background-color: $cream;
     color: rgb(39, 39, 39);
     overflow: hidden;
-    perspective: 1300px;
     position: relative;
+}
+
+#checkerboard-3d-wrapper {
+    animation: delayed-hide 0s 2.3s forwards;
+    height: 100%;
+    overflow: hidden;
+    perspective: 1300px;
+    position: absolute;
+    transform-style: preserve-3d;
+    width: 100%;
+    z-index: 2;
+}
+
+@keyframes delayed-hide {
+    from {
+        left: 0;
+    }
+
+    to {
+        left: 100%;
+    }
 }
 
 #checkerboard {
@@ -50,11 +70,10 @@ body {
     height: 100%;
     justify-content: center;
     left: 0;
-    position: absolute;
+    // position: absolute;
     top: 0;
     transform: rotateX(0.00001deg) rotateZ(0.00001deg) translateZ(0.1px);
     width: 100%;
-    z-index: 2;
 }
 
 @keyframes spin {
@@ -224,16 +243,6 @@ main {
 @media only screen and (max-width : 500px) {
     #checkerboard {
         font-size: 3rem;
-    }
-    
-    @keyframes spin {
-        0% {
-            transform: scaleY(1);
-        }
-    
-        100% {
-            transform: scaleY(0);
-        }
     }
     
     h1 {
